--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
   }
 </style>
 <h2>Screenshots From Development</h2>
-<img src="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/FennOS%204%20on%20Scratch.png" height="28.8604651163" width="38.7906976744"></img>
+<img src="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/FennOS%204%20on%20Scratch.png" height="82.7333333333" width="111.2"></img>
