--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+  <title>My Page Title</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+</head>
+<body>
 <h1>Welcome to the <em><mark>official</mark></em> FennOS Website!</h1>
 <style>
   body{
@@ -6,3 +11,4 @@
 </style>
 <h2>Screenshots From Development</h2>
 <img src="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/FennOS%204%20on%20Scratch.png" height="413.666666667" width="556"></img>
+</body>
