--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
-  <title>My Page Title</title>
-  <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+  <title>FennOS</title>
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/favicon_Vua_icon.ico">
 </head>
 <body>
 <h1>Welcome to the <em><mark>official</mark></em> FennOS Website!</h1>
