--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <h2>Screenshots From Development</h2>
 <img src="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/FennOS%204%20on%20Scratch.png" height="413.666666667" width="556"></img>
 <audio>
-  <source src="" type="audio/mpeg">
+  <source src="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/FennOS%20Startup.mp3" type="audio/mpeg">
 </audio>
 </body>
