--- a/index.html
+++ b/index.html
@@ -14,4 +14,6 @@
 <br><audio autoplay>
   <source src="https://raw.githubusercontent.com/RagnowProductions/FennOS/main/FennOS%20Startup.mp3" type="audio/mpeg">
 </audio>
+<p>FennOS Was An Idea Of A Simple OS, But Has Gotten Better Over The Years. Even Know The HDI Isn't Releasing, FennOS 4 Will Join Better Than It's Pre-release Betas.</p>
+<br><br><p>How About I Just Bring The Beta VM Over To The Page?</p><br><iframe src="https://scratch.mit.edu/projects/666615834/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
